--- a/catalog/view/theme/default/forget_pass.html
+++ b/catalog/view/theme/default/forget_pass.html
@@ -229,7 +229,9 @@
 								<p class="ts_ps">Warning: The E-Mail Address was not found in our records, please try again!</p>
 							</label>
 							
-							<button class="back">BACK</button>
+							<a class="back" href="###">BACK</a>
+							<!--<a class="continue" href="###">CONTINUE</a>-->
+							<!--<button class="back">BACK</button>-->
 							<button class="continue">CONTINUE</button>
 						</div>
 					</form>
