--- a/catalog/view/theme/default/forget_pass2.html
+++ b/catalog/view/theme/default/forget_pass2.html
@@ -232,7 +232,7 @@
 								<input type="password" />
 								<p class="ts_ps">Warning: The E-Mail Address was not found in our records, please try again!</p>
 							</label>
-							<button class="back">BACK</button>
+							<a class="back" href="###">BACK</a>
 							<button class="continue">CONTINUE</button>
 						</div>
 					</form>
