--- a/catalog/view/theme/default/sign_out.html
+++ b/catalog/view/theme/default/sign_out.html
@@ -221,7 +221,7 @@
 						Your shopping cart has been saved, the items inside it will be restored whenever you log back into your account.
 					</p>
 					<div class="form_div clearfix">
-						<button class="back">CONTINUE</button>
+						<a class="back" href="###">CONTINUE</a>
 					</div>
 					
 				</div>
